# eft-bot

./: main.py  pyproject.toml
PRJ_02/Week1/: PRJ02_W1_001_RAG_Evaluation_Intro.ipynb  PRJ02_W1_002_Retrieval_Metrics.ipynb  PRJ02_W1_003_Retrieval_Keyword_Hybrid.ipynb  PRJ02_W1_004_Retrieval_Query_Expansion.ipynb  PRJ02_W1_005_Retrieval_Rerank_Compression.ipynb  PRJ02_W1_006_Contextual_Retrieval.ipynb  PRJ02_W1_조혜승_20260627.ipynb  PRJ02_W2_001_LLM_Providers.ipynb  PRJ02_W2_002_Generation_Metrics.ipynb  PRJ02_W2_002_Generation_Metrics_teacher.ipynb  PRJ02_W2_003_LLM-as-Judge-LangChain.ipynb  PRJ02_W2_004_Pairwise_Evaluation.ipynb  PRJ02_W2_005_Langfuse_Evaluation.ipynb  custom_loader.py  각 프롬프트의 구체적인 소스코드 파일 절대 경로.txt
PRJ_02/Week1/chroma_db/: chroma.sqlite3
PRJ_02/Week1/data/: 6_DQMiner_web_guide.md  DQMiner_guide_qa.txt  evaluation_dataset.csv  ragas_testset.csv
