[project]
name = "etf-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.3",
    "langfuse>=4.10.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rapidfuzz>=3.14.5",
]
