[project]
name = "etf-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.8",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langfuse>=4.10.0",
    "openpyxl>=3.1.5",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "ranx-k>=0.0.17",
    "rapidfuzz>=3.14.5",
]
